--- a/Script_Sanitize_CSharp/Script_Sanitize_CSharp.csproj
+++ b/Script_Sanitize_CSharp/Script_Sanitize_CSharp.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SanitizerUtils.cs" />
     <Compile Include="SantizerOptions.cs" />
     <Compile Include="ScriptSantizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
